[project]
name = "mauro-bot"
version = "0.1.0"
description = "RAG agent — Spark de Ideas blog"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "databricks-langchain[memory]>=0.19.0",
    "databricks-ai-bridge[agent-server]>=0.19.0",
    "databricks-sdk>=0.79.0",
    "mlflow>=3.10.1",
    "langgraph>=1.1.0",
    "python-dotenv>=1.2.1",
    "uuid-utils>=0.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_server"]

[project.scripts]
start-app = "agent_server.start_server:main"
